Updated book content

--- a/book/settings-types.dita
+++ b/book/settings-types.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html>
+<html><h1>Settings Types</h1>
   <p class="hascomments">Let's say you're writing a webserver. You want the server to take a port to listen on, and an
    application to run. So you create the following function:</p>
   <pre>run :: Int -&gt; Application -&gt; IO ()</pre>
@@ -47,8 +47,8 @@
   <p class="hascomments">With this approach, no one can write code like (2), so you can freely add new records without
    any fear of code breaking.</p>
   <p class="hascomments">The one downside of this approach is that it's not immediately obvious from the Haddocks that
-   you can actually change the settings via record syntax. That's the point of this chapter: to give
-   everyone using this approach a page to link to that will explain to users what's going on.</p>
+   you can actually change the settings via record syntax. That's the point of this chapter: to
+   clarify what's going on in the libraries that use this technique.</p>
   <p class="hascomments">I personally use this technique in a few places, feel free to have a look at the Haddocks to
    see what I mean.</p>
   <ul id="ul_iih_pve_wd">
