--- a/book/yesod-web-framework-book/creating-a-subsite/creating-a-subsite.dita
+++ b/book/yesod-web-framework-book/creating-a-subsite/creating-a-subsite.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html><p id="i1" class="hascomments">How many sites provide authentication systems? Or need to provide CRUD (CRUD) management of some objects? Or a blog? Or a wiki?</p><p id="i2" class="hascomments">The theme here is that many websites include common components that can be reused throughout multiple sites. However, it is often quite difficult to get code to be modular enough to be truly plug-and-play: a component will require hooks into the routing system, usually for multiple routes, and will need some way of sharing styling information with the master site.</p><p id="i3" class="hascomments">In Yesod, the solution is subsites. A subsite is a collection of routes and their handlers that can be easily inserted into a master site. By using type classes, it is easy to ensure that the master site provides certain capabilities, and to access the default site layout. And with type-safe URLs, it's easy to link from the master site to subsites.</p><p id="hw1" class="hascomments">Writing subsites is a little bit tricky, involving a number of different types. Let's start off with a simple Hello World subsite:</p><pre id="x1">-- START
+<html><h1>Creating a Subsite</h1><p id="i1" class="hascomments">How many sites provide authentication systems? Or need to provide CRUD (CRUD) management of some objects? Or a blog? Or a wiki?</p><p id="i2" class="hascomments">The theme here is that many websites include common components that can be reused throughout multiple sites. However, it is often quite difficult to get code to be modular enough to be truly plug-and-play: a component will require hooks into the routing system, usually for multiple routes, and will need some way of sharing styling information with the master site.</p><p id="i3" class="hascomments">In Yesod, the solution is subsites. A subsite is a collection of routes and their handlers that can be easily inserted into a master site. By using type classes, it is easy to ensure that the master site provides certain capabilities, and to access the default site layout. And with type-safe URLs, it's easy to link from the master site to subsites.</p><h2>Hello World</h2><p id="hw1" class="hascomments">Writing subsites is a little bit tricky, involving a number of different types. Let's start off with a simple Hello World subsite:</p><pre id="x1">-- START
 {-# LANGUAGE QuasiQuotes, TypeFamilies, MultiParamTypeClasses #-}
 {-# LANGUAGE TemplateHaskell, FlexibleInstances, OverloadedStrings #-}
 import Yesod
