--- a/book/yesod-web-framework-book/http-conduit/http-conduit.dita
+++ b/book/yesod-web-framework-book/http-conduit/http-conduit.dita
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html>
+<html><h1>http-conduit</h1>
   <p id="x-3" class="hascomments">Most of Yesod is about serving content over HTTP. But that's only half the story: someone has
    to receive it. And even when you're writing a web app, sometimes that someone will be you. If you
    want to consume content from other services or interact with RESTful APIs, you'll need to write
    client code. And the recommended approach for that is http-conduit.</p>
   <p id="x-5" class="hascomments">This chapter is not directly connected to Yesod, and will be generally useful for anyone
    wanting to make HTTP requests.</p>
- 
+ <h2>Synopsis</h2>
   <pre id="x-3">{-# LANGUAGE OverloadedStrings #-}
 import Network.HTTP.Conduit -- the main module
 
@@ -51,7 +51,7 @@ main = do
                 }
         res2 &lt;- http req2 manager
         responseBody res2 $$ sinkFile "post-foo.txt"</pre>
- 
+ <h2>Concepts</h2>
   <p id="x-3" class="hascomments">The simplest way to make a request in http-conduit is with the
     simpleHttp function. This function takes a String giving a URL
    and returns a ByteString with the contents of that URL. But under the surface,
@@ -70,7 +70,7 @@ main = do
    (plus a few more) by explicitly creating a Request value, allocating your
     Manager manually, and using the http and
     httpLbs functions.</p>
- 
+ <h2>Request</h2>
   <p id="x-3" class="hascomments">The easiest way to creating a Request is with the parseUrl
    function. This function will return a value in any Failure monad, such as
     Maybe or IO. The last of those is the most commonly used, and
@@ -91,9 +91,9 @@ main = do
                 Just req -&gt; withManager $ \manager -&gt; do
                     Response _ _ lbs &lt;- httpLbs req manager
                     liftIO $ L.putStr lbs
-        _ -&gt; putStrLn "Sorry, please provide example one URL"</pre>
+        _ -&gt; putStrLn "Sorry, please provide exactly one URL"</pre>
   <p id="x-10" class="hascomments">The Request type is abstract so that http-conduit can add new
-   settings in the future without breaking the API (see the <a href="../../settings-types.dita#file250-conceptIdx-20" id="x-13">Settings Type</a>
+   settings in the future without breaking the API (see the <a href="../../settings-types.dita#file248-conceptIdx-20" id="x-13">Settings Type</a>
    chapter for more information). In order to make changes to individual records, you use record
    notation. For example, a modification to our program that issues HEAD requests
    and prints the response headers would be:</p>
@@ -139,7 +139,7 @@ main = do
      common case of url-encoded data, you can use the urlEncodedBody function.</dd>
    
   </dl>
- 
+ <h2>Manager</h2>
   <p id="x-3" class="hascomments">The connection manager allows you to reuse connections. When making multiple queries to a
    single server (e.g., accessing Amazon S3), this can be critical for creating efficient code. A
    manager will keep track of multiple connections to a given server (taking into account port and
@@ -160,7 +160,7 @@ main = do
   <p id="x-17" class="hascomments">One other thing to point out: you obviously don't want to create a new manager for each and
    every request; that would defeat the whole purpose. You should create your
     Manager early and then share it.</p>
- 
+ <h2>Response</h2>
   <p id="x-3" class="hascomments">The Response datatype has three pieces of information: the status code, the
    response headers, and the response body. The first two are straight-forward; let's discuss the
    body.</p>
@@ -173,24 +173,13 @@ main = do
   <aside id="x-12" class="note">The conduit package does provide a lazy module which would allow you to
    read this value in lazily, but like any lazy I/O, it's a bit unsafe, and definitely
    non-deterministic. If you need it though, you can use it.</aside>
- 
+ <h2>http and httpLbs</h2>
   <p id="x-3" class="hascomments">So let's tie it together. The http function gives you access to the streaming
    interface (i.e., it returns a Response using a BufferedSource)
    while httpLbs returns a lazy ByteString. Both of these return
    values in the ResourceT transformer so that they can access the
     Manager and have connections handled properly in the case of exceptions.</p>
-  <p id="x-11" class="hascomments">Here are a bunch of random comments about the library. Consider it the FAQ. Likewise, if you
-   have a question, please ask it so that this section can be updated.</p>
-  <dl id="x-12">
-   
-    <dt id="x-14">How do I ignore the remainder of a response body without reading it?</dt>
-    <dd id="x-15">Connect it to the sinkNull sink.</dd>
-   
-   
-    <dt id="x-18">I want to share a single Manager across my entire application. How can I do
-     this?</dt>
-    <dd id="x-20">Use the newManager function at the beginning of your application, and pass
-     it to all functions that need it.</dd>
-   
-  </dl>
+  <aside class="note">If you want to ignore the remainder of a large response body, you can connect to the
+    sinkNull sink. The underlying connection will automatically be closed,
+   preventing you from having to read a large response body over the network.</aside>
  </html>
