--- a/book/yesod-web-framework-book/restful-content/restful-content.dita
+++ b/book/yesod-web-framework-book/restful-content/restful-content.dita
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html><p id="i1" class="hascomments">One of the stories from the early days of the web is how search engines wiped out entire
+<html><h1>RESTful Content</h1><p id="i1" class="hascomments">One of the stories from the early days of the web is how search engines wiped out entire
             websites. When dynamic web sites were still a new concept, developers didn't appreciate
             the difference between a GET and POST request. As a
             result, they created pages- accessed with the GET method- that would
             delete pages. When search engines started crawling these sites, they could wipe out all
             the content.</p><p id="i2" class="hascomments">If these web developers had followed the HTTP spec properly, this would not have
-            happened. A GET request is supposed to cause no side effects (you know,
-            like wiping out a site). Recently, there has been a move in web development called
-            Representational State Transfer, also known as REST. This chapter describes the RESTful
-            features in Yesod and how you can use them to create more robust web applications.</p><p id="rm1" class="hascomments">In many web frameworks, you write one handler function per resource. In Yesod, the default is to have a separate handler function for each <dfn id="x1">request method</dfn>. The two most common request methods you will deal with in creating web sites are GET and POST. These are the most well-supported methods in HTML, since they are the only ones supported by web forms. However, when creating RESTful APIs, the other methods are very useful.</p><p id="rm2" class="hascomments">Technically speaking, you can create whichever request methods you like, but it is strongly recommended to stick to the ones spelled out in the HTTP spec. The most common of these are:</p><dl id="x2"><dt id="x4">GET</dt><dd id="x5">Read-only requests. Assuming no other changes occur on the server, calling a
+            happened. A GET request is supposed to cause no side effects
+            (you know, like wiping out a site). Recently, there has been a move in web development
+            to properly embrace Representational State Transfer, also known as REST. This chapter
+            describes the RESTful features in Yesod and how you can use them to create more robust
+            web applications.</p><h2>Request methods</h2><p id="rm1" class="hascomments">In many web frameworks, you write one handler function per resource. In Yesod, the default is to have a separate handler function for each <dfn id="x1">request method</dfn>. The two most common request methods you will deal with in creating web sites are GET and POST. These are the most well-supported methods in HTML, since they are the only ones supported by web forms. However, when creating RESTful APIs, the other methods are very useful.</p><p id="rm2" class="hascomments">Technically speaking, you can create whichever request methods you like, but it is strongly recommended to stick to the ones spelled out in the HTTP spec. The most common of these are:</p><dl id="x2"><dt id="x4">GET</dt><dd id="x5">Read-only requests. Assuming no other changes occur on the server, calling a
                         GET request multiple times should result in the same
                     response, barring such things as "current time" or randomly assigned
                     results.</dd><dt id="x7">POST</dt><dd id="x8">A general mutating request. A POST request should never be submitted
@@ -17,7 +18,7 @@
                 GET request is similar to a pure function, which cannot have side
             effects. In practice, your GET functions will probably perform
                 IO, such as reading information from a database, logging user
-            actions, and so on.</p><p id="rm4" class="hascomments">See the <a href="../../yesod-web-framework-book/routing-and-handlers/routing-and-handlers.dita" id="x16">routing and handlers chapter</a> chapter for more information on the syntax of defining handler functions for each request method.</p><p id="rp1" class="hascomments">Suppose we have a Haskell datatype and value:</p><pre id="x1">data Person = Person { name :: String, age :: Int }
+            actions, and so on.</p><p id="rm4" class="hascomments">See the <a href="../../yesod-web-framework-book/routing-and-handlers/routing-and-handlers.dita" id="x16">routing and handlers chapter</a> chapter for more information on the syntax of defining handler functions for each request method.</p><h2>Representations</h2><p id="rp1" class="hascomments">Suppose we have a Haskell datatype and value:</p><pre id="x1">data Person = Person { name :: String, age :: Int }
 michael = Person "Michael" 25</pre><p id="rp2" class="hascomments">We could represent that data as HTML:</p><pre id="x2">&lt;table&gt;
     &lt;tr&gt;
         &lt;th&gt;Name&lt;/th&gt;
@@ -37,26 +38,31 @@ michael = Person "Michael" 25</pre><p id="rp2" class="hascomments">We could repr
             accessed from /person/michael.</p><p id="rp6" class="hascomments">Then the question becomes how do we determine which representation to
             serve. The answer is the HTTP Accept header: it gives a prioritized
             list of content types the client is expecting. Yesod will automatically determine which
-            representation to serve based upon this header.</p><p id="rp7" class="hascomments">Let's make that last sentence a bit more concrete with some code:</p><pre id="x7">class HasReps a where
-    chooseRep :: a -&gt; [ContentType] -&gt; IO (ContentType, Content)</pre><p id="rp8" class="hascomments">The chooseRep function takes two arguments: the value we are getting
+            representation to serve based upon this header.</p><p id="rp7" class="hascomments">Let's make that last sentence a bit more concrete with some code:</p><pre id="x7">type ChooseRep = [ContentType] -&gt; IO (ContentType, Content)
+class HasReps a where
+    chooseRep :: a -&gt; ChooseRep</pre><p id="rp8" class="hascomments">The chooseRep function takes two arguments: the value we are getting
             representations for, and a list of content types that the client will accept. We
             determine this by reading the Accept request header.
                 chooseRep returns a tuple containing the content type of our
             response and the actual content.</p><p id="rp10" class="hascomments">This typeclass is the core of Yesod's RESTful approach to representations. Every
-            handler function must return an instance of HasReps. Yesod provides a
-            number of instances of HasReps out of the box. When we use
-                defaultLayout, for example, the return type is
-                RepHtml, which looks like:</p><pre id="x8">newtype RepHtml = RepHtml Content
+            handler function must return an instance of HasReps. When
+            Yesod generates the dispatch function, it automatically applies
+                chooseRep to each handler, essentially giving all functions the
+            type Handler ChooseRep. After running the Handler and
+            obtaining the ChooseRep result, it is applied to the list of content
+            types parsed from the Accept header.</p>
+        <p class="hascomments">Yesod provides a number of instances of HasReps out of the
+            box. When we use defaultLayout, for example, the return type
+            is RepHtml, which looks like:</p><pre id="x8">newtype RepHtml = RepHtml Content
 instance HasReps RepHtml where
     chooseRep (RepHtml content) _ = return ("text/html", content)</pre><p id="rp11" class="hascomments">Notice that we ignore entirely the list of expected content types. A number of the
             built in representations (RepHtml, RepPlain,
                 RepJson, RepXml) in fact only support a single
             representation, and therefore what the client requests in the Accept
-            header is irrelevant.</p><p id="rhj1" class="hascomments">An example to the contrary is RepHtmlJson, which provides either an
+            header is irrelevant.</p><h3>RepHtmlJson</h3><p id="rhj1" class="hascomments">An example to the contrary is RepHtmlJson, which provides either an
             HTML or JSON representation. This instance helps greatly in programming AJAX
             applications that degrade nicely. Here is an example that returns either HTML or JSON
-            data, depending on what the client wants.</p><pre id="x1">-- START
-{-# LANGUAGE QuasiQuotes, TypeFamilies, OverloadedStrings #-}
+            data, depending on what the client wants.</p><pre id="x1">{-# LANGUAGE QuasiQuotes, TypeFamilies, OverloadedStrings #-}
 {-# LANGUAGE MultiParamTypeClasses, TemplateHaskell #-}
 import Yesod
 data R = R
@@ -71,7 +77,7 @@ getRootR = defaultLayout $ do
     addScriptRemote "http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"
     addJulius [julius|
 $(function(){
-    $("a").click(function(){
+    $("#ajax a").click(function(){
         jQuery.getJSON($(this).attr("href"), function(o){
             $("div").text(o.name);
         });
@@ -81,12 +87,24 @@ $(function(){
 |]
     let names = words "Larry Moe Curly"
     addHamlet [hamlet|
-&lt;div id="results"&gt;
-    Your results will be placed here if you have Javascript enabled.
-&lt;ul&gt;
+&lt;h2&gt;AJAX Version
+&lt;div #results&gt;
+    AJAX results will be placed here when you click #
+    the names below.
+&lt;ul #ajax&gt;
     $forall name &lt;- names
         &lt;li&gt;
-            &lt;a href="@{NameR name}"&gt;#{name}
+            &lt;a href=@{NameR name}&gt;#{name}
+
+&lt;h2&gt;HTML Version
+&lt;p&gt;
+    Clicking the names below will redirect the page #
+    to an HTML version.
+&lt;ul #html&gt;
+    $forall name &lt;- names
+        &lt;li&gt;
+            &lt;a href=@{NameR name}&gt;#{name}
+
 |]
 
 getNameR name = do
@@ -96,18 +114,22 @@ getNameR name = do
     let json = object ["name" .= name]
     defaultLayoutJson widget json
 
-main = warpDebug 4000 R
--- STOP
-</pre><p id="rhj2" class="hascomments">Our getRootR handler creates a page with three links and some
+main = warpDebug 4000 R</pre><p id="rhj2" class="hascomments">Our getRootR handler creates a page with three links and some
             Javascript which intercept clicks on the links and performs asynchronous requests. If
             the user has Javascript enabled, clicking on the link will cause a request to be sent
-            with an Accept header of application/json. In that
-            case, getNameR will return the JSON representation defined on line
-            40.</p><p id="rhj3" class="hascomments">If the user disables Javascript, clicking on the link will send the user to the appropriate URL. A web browser places priority on an HTML representation of the data, and therefore the page defined on lines 36-38 will be returned.</p><p id="rhj4" class="hascomments">We can of course extend this to work with XML, Atom feeds, or even binary
+            with an Accept header of application/json. In that case, getNameR will
+            return the JSON representation instead.</p><p id="rhj3" class="hascomments">If the user disables Javascript, clicking on the link will send the user to the
+            appropriate URL. A web browser places priority on an HTML representation of the data,
+            and therefore the page defined by the widget will be returned.</p><p id="rhj4" class="hascomments">We can of course extend this to work with XML, Atom feeds, or even binary
             representations of the data. A fun exercise could be writing a web application that
             serves data simply using the default Show instances of datatypes, and
             then writing a web client that parses the results using the default
-                Read instances.</p><p id="n1" class="hascomments">A great, practical example of multiple representations if the yesod-newsfeed package. There are two major formats for news feeds on the web: RSS and Atom. They contain almost exactly the same information, but are just packaged up differently.</p><p id="n2" class="hascomments">The yesod-newsfeed package defines a Feed
+                Read instances.</p>
+        <aside class="note">You might be concerned about efficiency here. Doesn't this approach mean we have to
+            generate both an HTML and JSON response for each request? Thanks to laziness, that's not
+            the case. In getNameR, neither widget nor
+                json will be evaluated until the appropriate response type has been
+            selected, and therefore only one of them will ever be run.</aside><h3>News Feeds</h3><p id="n1" class="hascomments">A great, practical example of multiple representations if the yesod-newsfeed package. There are two major formats for news feeds on the web: RSS and Atom. They contain almost exactly the same information, but are just packaged up differently.</p><p id="n2" class="hascomments">The yesod-newsfeed package defines a Feed
             datatype which contains information like title, description, and last updated time. It
             then provides two separate sets of functions for displaying this data: one for RSS, one
             for Atom. They each define their own representation datatypes:</p><pre id="x3">newtype RepAtom = RepAtom Content
@@ -120,13 +142,13 @@ instance HasReps RepAtomRss where
     chooseRep (RepAtomRss (RepAtom a) (RepRss r)) = chooseRep
         [ (typeAtom, a)
         , (typeRss, r)
-        ]</pre><p id="n4" class="hascomments">This datatype will automatically serve whichever representation the client prefers, defaulting to Atom. If a client connects that only understands RSS, assuming it provides the correct HTTP headers, Yesod will provide RSS output.</p><p id="rh1" class="hascomments">There are a great deal of other request headers available. Some of them only affect the
+        ]</pre><p id="n4" class="hascomments">This datatype will automatically serve whichever representation the client prefers, defaulting to Atom. If a client connects that only understands RSS, assuming it provides the correct HTTP headers, Yesod will provide RSS output.</p><h2>Other request headers</h2><p id="rh1" class="hascomments">There are a great deal of other request headers available. Some of them only affect the
             transfer of data between the server and client, and should not affect the application at
             all. For example, Accept-Encoding informs the server which compression
             schemes the client understands, and Host informs the server which
             virtual host to serve up.</p><p id="rh2" class="hascomments">Other headers do affect the application, but are automatically read by
             Yesod. For example, the Accept-Language header specifies which human
             language (English, Spanish, German, Swiss-German) the client prefers. See the <a href="../../yesod-web-framework-book/internationalization/internationalization.dita" id="x2">i18n chapter</a>
-            for details on how this header is used.</p><p id="stateless1" class="hascomments">I've saved this section for the last, not because it is less important, but rather because there are no specific features in Yesod to enforce this.</p><p id="stateless2" class="hascomments">HTTP is a stateless protocol: each request is to be seen as the beginning of a conversation. This means, for instance, it doesn't matter to the server if you requested five pages previously, it will treat your sixth request as if it's your first one.</p><p id="stateless3" class="hascomments">On the other hand, some features on websites won't work without some kind of state. For example, how can you implement a shopping cart without saving information about items in between requests?</p><p id="stateless4" class="hascomments">The solution to this is cookies, and built on top of this, sessions. We have a <a href="../../yesod-web-framework-book/sessions/sessions.dita" id="x1">whole section</a> addressing the sessions features in Yesod. However, I cannot stress enough that this should be used sparingly.</p><p id="stateless5" class="hascomments">Let me give you an example. There's a popular bug tracking system that I deal with on a daily basis which horribly abuses sessions. There's a little drop-down on every page to select the current project. Seems harmless, right? What that dropdown does is set the current project in your session.</p><p id="stateless6" class="hascomments">The result of all this is that clicking on the "view issues" link is entirely dependent on the last project you selected. There's no way to create a bookmark to your "Yesod" issues and a separate link for your "Hamlet" issues.</p><p id="stateless7" class="hascomments">The proper RESTful approach to this is to have one resource for all of the Yesod issues and a separate one for all the Hamlet issues. In Yesod, this is easily done with a route definition like:</p><pre id="x2">/ ProjectsR GET
+            for details on how this header is used.</p><h2>Stateless</h2><p id="stateless1" class="hascomments">I've saved this section for the last, not because it is less important, but rather because there are no specific features in Yesod to enforce this.</p><p id="stateless2" class="hascomments">HTTP is a stateless protocol: each request is to be seen as the beginning of a conversation. This means, for instance, it doesn't matter to the server if you requested five pages previously, it will treat your sixth request as if it's your first one.</p><p id="stateless3" class="hascomments">On the other hand, some features on websites won't work without some kind of state. For example, how can you implement a shopping cart without saving information about items in between requests?</p><p id="stateless4" class="hascomments">The solution to this is cookies, and built on top of this, sessions. We have a <a href="../../yesod-web-framework-book/sessions/sessions.dita" id="x1">whole section</a> addressing the sessions features in Yesod. However, I cannot stress enough that this should be used sparingly.</p><p id="stateless5" class="hascomments">Let me give you an example. There's a popular bug tracking system that I deal with on a daily basis which horribly abuses sessions. There's a little drop-down on every page to select the current project. Seems harmless, right? What that dropdown does is set the current project in your session.</p><p id="stateless6" class="hascomments">The result of all this is that clicking on the "view issues" link is entirely dependent on the last project you selected. There's no way to create a bookmark to your "Yesod" issues and a separate link for your "Hamlet" issues.</p><p id="stateless7" class="hascomments">The proper RESTful approach to this is to have one resource for all of the Yesod issues and a separate one for all the Hamlet issues. In Yesod, this is easily done with a route definition like:</p><pre id="x2">/ ProjectsR GET
 /projects/#ProjectID ProjectIssuesR GET
-/issues/#IssueID IssueR GET</pre><p id="stateless8" class="hascomments">Be nice to your users: proper stateless architecture means that basic features like bookmarks, permalinks and the back/forward button will always work.</p><p id="s1" class="hascomments">Yesod adheres to the following tenets of REST:</p><ul id="x1"><li id="x2">Use the correct request method.</li><li id="x3">Each resource should have precisely one URL.</li><li id="x4">Allow multiple representations of data on the same URL.</li><li id="x5">Inspect request headers to determine extra information about what the client wants.</li></ul><p id="s2" class="hascomments">This makes it easy to use Yesod not just for building websites, but for building APIs. In fact, using techniques such as RepHtmlJson, you can serve both a user-friendly, HTML page and a machine-friendly, JSON page from the same URL.</p></html>
+/issues/#IssueID IssueR GET</pre><p id="stateless8" class="hascomments">Be nice to your users: proper stateless architecture means that basic features like bookmarks, permalinks and the back/forward button will always work.</p><h2>Summary</h2><p id="s1" class="hascomments">Yesod adheres to the following tenets of REST:</p><ul id="x1"><li id="x2">Use the correct request method.</li><li id="x3">Each resource should have precisely one URL.</li><li id="x4">Allow multiple representations of data on the same URL.</li><li id="x5">Inspect request headers to determine extra information about what the client wants.</li></ul><p id="s2" class="hascomments">This makes it easy to use Yesod not just for building websites, but for building APIs. In fact, using techniques such as RepHtmlJson, you can serve both a user-friendly, HTML page and a machine-friendly, JSON page from the same URL.</p></html>
